# kl3m-toxicity

./: .gitignore  README.md  pyproject.toml  run_experiment_001.sh  run_experiment_002.sh  run_experiment_003.sh
data/input/: prompts-001.txt  prompts-002.txt  prompts-003.txt
data/output/: scoring-001.csv  scoring-003.csv
toxicity_research/: data.py  models.py  scoring.py
toxicity_research/cli/: analyze_samples.py  generate_prompts.py  generate_samples.py  score_samples.py
