[tool.poetry]
name = "toxicity-research"
version = "0.1.0"
description = "KL3M Toxicity Research Replication"
authors = ["mjbommar <mike@273ventures.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.38.2"
pandas = "^2.2.1"
torch = "2.2.1"
accelerate = "^0.27.2"
tiktoken = "^0.6.0"
openai = "^1.12.0"
matplotlib = "^3.8.3"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
